--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,17 @@
 h1, h2 {
     font-family: 'Indie Flower', sans-serif;
+    display: flex;
+    justify-content: center;
+    font-size: 4rem;
+}
+
+#title {
+    display: flex;
+    justify-content: center;
+    font-family: 'Rock Salt', cursive;
+    font-size: 5rem;
+    line-height: 80px;
+    margin-top: -40px;
 }
 
 main {
@@ -18,6 +30,7 @@ main {
 
 .animals {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
+
 }
