--- a/styles/style.css
+++ b/styles/style.css
@@ -42,13 +42,14 @@ main {
 #waves-text {
     position: absolute;
     top: 170px;
-    left: 180px;
+    left: 50px;
     text-align: center;
     font-family: 'Rock Salt', cursive;
+    justify-content: center;
 }
 
 #fire-text {
-    position: absolute;
+    position: relative;
     top: 170px;
     left: 440px;
     text-align: center;
@@ -56,7 +57,7 @@ main {
 }
 
 #rain-text {
-    position: absolute;
+    position: relative;
     top: 170px;
     left: 780px;
     text-align: center;
